@@ -53,6 +53,7 @@ object GenesisJvmConfig {
                         "-Xcontext-parameters",
                         "-Xannotation-default-target=param-property",
                         "-Xjdk-release=$JVM_VERSION",
+                        "-Xjvm-enable-preview", // Enable Java 25 preview features
                         "-opt-in=kotlin.RequiresOptIn",
                         "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi",
                         "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api"
@@ -64,6 +65,7 @@ object GenesisJvmConfig {
             tasks.withType<JavaCompile>().configureEach {
                 sourceCompatibility = JVM_VERSION.toString()
                 targetCompatibility = JVM_VERSION.toString()
+                options.compilerArgs.add("--enable-preview")
             }
 
             // Configure toolchain - use afterEvaluate so extensions are ready
